--- a/munchkinonline/package.json
+++ b/munchkinonline/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "firebase": "^7.21.1",
+    "phaser": "^3.24.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
