--- a/munchkinonline/package.json
+++ b/munchkinonline/package.json
@@ -11,8 +11,9 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "firebase": "^7.21.1",
+    "firebase": "^7.24.0",
     "phaser": "^3.24.1",
+    "socket.io-client": "^2.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
