--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Move to directory
-        uses: cd munchkinonline
+        run: cd munchkinonline
       - name: Install Dependencies
         run: npm install
       - name: Build
