--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,10 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
-      - name: Move to directory
-        run: cd munchkinonline
       - name: Install Dependencies
-        run: npm install
+        run: npm install --prefix ./munchkinonline/
       - name: Build
-        run: npm run build
+        run: npm run build 
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
