--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install Dependencies
         run: npm install --prefix ./munchkinonline/
       - name: Build
-        run: npm run build 
+        run: npm run build --prefix ./munchkinonline/
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
