--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,41 @@
-name: Build and Deploy
 
+name: Build and Deploy
 on:
   push:
     branches:
       - master
-
 jobs:
-  deploy_to_firebase_hosting:
-
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout the repository
+      - name: Checkout Repo
         uses: actions/checkout@master
-      
-      - name: Open folder
-        run: cd ./munchkinonline/
-      
+      - name: Install Dependencies
+        run: npm install --prefix ./munchkinonline/
+      - name: Build
+        run: npm run build 
+      - name: Archive Production Artifact
+        uses: actions/upload-artifact@master
+        with:
+          name: dist
+          path: dist
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: dist
+          path: dist
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_PATH: ./munchkinonline/ 
+          PROJECT_PATH: ./munchkinonline/
