--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: dist
-          path: dist
+          path: ./munchkinonline/dist
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
