--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
     "socket.io": "^2.3.0"
-  }
+  },
+  "heroku-postbuild": "cd munchkinonline && ./build.sh"
 }
