--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
     "serve-static": "^1.14.1",
     "socket.io": "^2.3.0"
   },
-  "heroku-postbuild": "cd munchkinonline && ./build.sh"
+  "heroku-postinstall": "cd munchkinonline && ./build.sh"
 }
