--- a/munchkinonline/package.json
+++ b/munchkinonline/package.json
@@ -17,6 +17,7 @@
     "phaser": "^3.24.1",
     "serve-static": "^1.14.1",
     "socket.io-client": "^2.3.1",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
